--- a/indexStart.html
+++ b/indexStart.html
@@ -41,7 +41,7 @@
                 <h2>Bookmarker</h2>
 
                 <div class="floater content">
-                    <form class="bookmark-form">
+                    <form class="bookmark-form" id="myForm">
                         <div class="floater-top">
                             <input id="url" type="text" placeholder="Bookmark URL" class="form-control">
                             <input id="description" type="text" placeholder="Bookmark Description" class="form-control">
