--- a/indexStart.html
+++ b/indexStart.html
@@ -40,7 +40,7 @@
             <div class="col-md-8 col-xs-8 col-lg-8 col-sm-8">
                 <h2>Bookmarker</h2>
 
-                <div class="floater content">
+                <div class="floater content" id="floater-click">
                     <form class="bookmark-form" id="myForm">
                         <div class="floater-top">
                             <input id="url" type="text" placeholder="Bookmark URL" class="form-control">
@@ -78,6 +78,6 @@
             <div class="col-md-2 col-xs-2 col-lg-2 col-sm-2"></div>
         </div>
     </div>
-                <script src="src/index.js"></script>
+                <script src="dist/index.js"></script>
 </body>
 </html>
