I blame Alicia. Localstorage now recorded. Improved highlighting of input boxes when not filled in.

--- a/indexStart.html
+++ b/indexStart.html
@@ -43,8 +43,12 @@
                 <div class="floater content" id="floater-click">
                     <form class="bookmark-form" id="myForm">
                         <div class="floater-top">
-                            <input id="url" type="text" placeholder="Bookmark URL" class="form-control">
-                            <input id="description" type="text" placeholder="Bookmark Description" class="form-control">
+                            <span>
+                                <input id="url" type="text" placeholder="Bookmark URL" class="form-control">
+                            </span>
+                            <span>
+                                <input id="description" type="text" placeholder="Bookmark Description" class="form-control">
+                            </span>
                         </div>
                         <div class="floater-bottom">
                             <button type="submit" class="btn btn-primary btn-sm" id="submit">Add</button>
@@ -78,6 +82,8 @@
             <div class="col-md-2 col-xs-2 col-lg-2 col-sm-2"></div>
         </div>
     </div>
-                <script src="dist/index.js"></script>
+                
+    <script src="dist/index.js"></script>
+
 </body>
 </html>
